templates/kask_template.yaml
---
# Source: kask/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kask-release-name
  labels:
    app: kask
    chart: kask-0.1.5
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: kask
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 8081
        protocol: TCP
---
# Source: kask/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kask-release-name
  labels:
    app: kask
    chart: kask-0.1.5
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: kask
    release: release-name
    routed_via: release-name
  ports:
  - name: http
    protocol: TCP
    port: 8081
---
# Source: kask/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kask-release-name
  labels:
    app: kask
    chart: kask-0.1.5
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: kask
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: kask
        release: release-name
        routed_via: release-name
      annotations:
        checksum/config: 8e3b3f4a4ea7a6c6eb3faad62673250f175331c8d72b412660bf714da24dbe71
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"
    spec:
      
      containers:
        # The main application container
        - name: kask-release-name
          image: "docker-registry.wikimedia.org/repos/mediawiki/services/kask:latest"
          command: ["./kask"]
          args: ["--config", "/etc/kask/config.yaml"]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          livenessProbe:
            tcpSocket:
              port: 8081
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8081
          volumeMounts:
            - name: config-volume
              mountPath: /etc/kask
          resources:
            requests:
              cpu: 150m
              memory: 100Mi
            limits:
              cpu: 150m
              memory: 150Mi
      volumes:
        - name: config-volume
          configMap:
            name: config-release-name
---
# Source: kask/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'kask-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'kask-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", "-s", "/openapi", '$(KASK_RELEASE_NAME_SERVICE_HOST)', 'http://kask-release-name:8081']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
